<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.task.android.ui.main.create_near_account.CreateNearAccountViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/top_corners_shape"
        tools:context=".ui.main.create_near_account.CreateNearAccountFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_16sdp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_near_account"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/close"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/icon"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.mckrpk.animatedprogressbar.AnimatedProgressBar
            android:id="@+id/animatedProgressBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_10sdp"
            app:animationDurationInMs="1600"
            app:animationStyle="line"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:lineWidth="4dp"
            app:max="100"
            app:progress="75"
            app:progressColor="@color/purple_500"
            app:progressTipEnabled="false"
            app:trackColor="@color/white" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/animatedProgressBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_16sdp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_an_account_id_to_use_with_your_near_account_your_account_id_will_be_used_for_all_near_operations_including_sending_and_receiving_assets" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/full_name"
                    android:textAllCaps="true" />

                <EditText
                    style="@style/DefaultTextField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:autofillHints="no"
                    android:hint="@string/ex_john_doe"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.fullName}" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:drawablePadding="@dimen/_16sdp"
                    android:text="@string/wallet_id"
                    android:textAllCaps="true"
                    app:drawableEndCompat="@drawable/ic_info" />

                <EditText
                    style="@style/DefaultTextField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:autofillHints="no"
                    android:hint="@string/yourname_near"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.walletId}" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/creaetAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:backgroundTint="@color/color_states_materialbutton_register"
                    android:enabled="@{viewModel.enableRegistration}"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:text="@string/create_an_account"
                    android:textAllCaps="false"
                    app:cornerRadius="10dp"
                    app:icon="@drawable/ic_forward"
                    app:iconGravity="textEnd" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/by_creating_a_near_account_you_agree_to_the_near_wallet_terms_of_service_and_privacy_policy"
                    android:textAlignment="center" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@color/colorGap" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/already_have_near_account"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textColor="@color/black" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:text="@string/login_with_near"
                    android:textAllCaps="false"
                    app:cornerRadius="10dp"
                    app:icon="@drawable/ic_forward"
                    app:iconGravity="textEnd" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>