<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="viewModel"
            type="com.task.android.ui.main.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.login.LoginFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/registration_pattern_height"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:paddingBottom="@dimen/_16sdp">


                <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
                    android:id="@+id/toggleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:justifyContent="center"
                    app:toggle_horizontalSpacing="@dimen/_24sdp"
                    app:toggle_selectableAmount="1">

                    <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                        android:id="@+id/btnEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="38dp"
                        app:toggle_backgroundColor="@color/white"
                        app:toggle_btnCornerRadius="10dp"
                        app:toggle_selectedBackgroundColor="@color/purple_500"
                        app:toggle_text="@string/email" />

                    <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                        android:id="@+id/btnPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="38dp"
                        app:toggle_backgroundColor="@color/white"
                        app:toggle_btnCornerRadius="10dp"
                        app:toggle_selectedBackgroundColor="@color/purple_500"
                        app:toggle_text="@string/phone" />

                </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>


                <EditText
                    android:id="@+id/email"
                    style="@style/DefaultTextField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:autofillHints="no"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}" />

                <EditText
                    android:id="@+id/phone"
                    style="@style/DefaultTextField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:autofillHints="no"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:text="@={viewModel.phone}"
                    android:visibility="gone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/getStarted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:enabled="@{viewModel.enableRegistration}"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:text="@string/get_started"
                    app:cornerRadius="10dp"
                    app:icon="@drawable/ic_forward"
                    app:iconGravity="textEnd" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@color/colorGap" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/already_have_near_account"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textColor="@color/black" />

                <EditText
                    style="@style/DefaultTextField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:autofillHints="no"
                    android:hint="@string/walletname_near"
                    android:inputType="text"
                    android:text="@={viewModel.wallet}" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:text="@string/login"
                    app:cornerRadius="10dp"
                    app:icon="@drawable/ic_forward"
                    app:iconGravity="textEnd" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/by_click_terms"
                    android:textAlignment="center" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>